test/negative/metal_no_hxrt_platform_boundary/Main.hx
class Main {
	static function main() {
		Sys.println("needs-runtime-platform");
	}
}
